# hashtap

./: .env.example  .gitignore  README.md  hashcash.md  package-lock.json  package.json  tsconfig.base.json
.github/workflows/: ci.yml
apps/ai-bot/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
apps/ai-bot/src/: __init__.py  agent_factory.py  config.py  main.py  odoo_client.py
apps/ai-bot/src/channels/: __init__.py  discuss.py  telegram.py
apps/ai-bot/src/memory/: __init__.py  sessions.py
apps/ai-bot/src/prompts/: ceo_system.md
apps/ai-bot/src/tools/: __init__.py  generic.py  menu_stock.py  orders.py  overview.py  reports.py
apps/ai-bot/tests/: test_config.py  test_redact.py  test_session_safe_id.py
apps/api/: README.md  package.json
apps/cashier/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/customer-pwa/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/heartbeat/: Dockerfile  README.md  package.json
apps/ops-api/: Dockerfile  README.md  package.json
apps/print-bridge/: README.md  package.json
apps/restaurant-dashboard/: README.md  (+3 more)
demo/: README.md  docs.html  index.html  prototype.html  shared.css  sunum.html
docs/: AI_ASSISTANT.md  ARCHITECTURE.md  BUSINESS_MODEL.md  DATA_MODEL.md  DEPLOYMENT.md  DESIGN_SYSTEM.md  DEV_SETUP.md  INSTALLATION_PLAYBOOK.md  MODULE_DESIGN.md  MULTI_TENANCY.md  OPERATIONS.md  PARTNER_PROGRAM.md  PILOT.md  PRODUCT.md  ROADMAP.md  SECURITY.md  STATUS.md  USER_TODO.md  WHITE_LABEL.md  hashtap-sunum.md
infra/: README.md  docker-compose.yml
(+171 files in other folders)
